Fixed a few bugs and made layout a little better on mobile

--- a/modules/frontend/src/components/gettingStarted/GettingStartedView.less
+++ b/modules/frontend/src/components/gettingStarted/GettingStartedView.less
@@ -5,5 +5,13 @@
 #GettingStartedView-content {
   min-height: @pageHeight;
   margin: 0;
-  padding: 2em 15em;
+  padding: 2em;
 }
+
+
+#MenuLayout-navbar {
+  & .logo-fix {
+    width: 5.7em;
+  }
+}
+
