--- a/modules/frontend/src/components/layout/MenuLayout.less
+++ b/modules/frontend/src/components/layout/MenuLayout.less
@@ -48,7 +48,6 @@
   height: @pageHeight;
   overflow-y: scroll;
   border-right: none;
-  width: ~"calc(100% - 15px)";
 }
 
 .ui.segment.content-segment {
